# para-auditor

./: .gitignore  CLAUDE.md  Makefile  README.md  para-auditor  pyproject.toml  requirements.txt  requirements.txt.bak  setup.py
config/: config.yaml.template
docs/: implementation_plan.md  requirements.md
scripts/: dev.sh
scripts/applescript/: get_notes_folders.scpt
src/: __init__.py  config_manager.py  main.py
src/auditor/: __init__.py  comparator.py  emoji_suggester.py  report_generator.py
src/auth/: __init__.py  google_auth.py  todoist_auth.py
src/connectors/: __init__.py  apple_notes_connector.py  gdrive_connector.py  todoist_connector.py
src/models/: para_item.py
src/utils/: __init__.py  name_matcher.py  spinner.py  url_parser.py
tests/: README.md  __init__.py  conftest.py  test_areas_handling.py  test_cli_areas.py
